--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
+* {
+    box-sizing: border-box;
+}
+
 body{
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
-}   
+}
 
 .container {
-    max-width: 1400px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 40px 20px;
 }
